--- a/05-condensateurs/diapos05.tex
+++ b/05-condensateurs/diapos05.tex
@@ -23,7 +23,7 @@
 \makeatother
 
 \title{Électricité et magnétisme}
-\subtitle{Chapitre 5 - Potentiel électrique}
+\subtitle{Chapitre 5 - Condensateurs}
 \date{29 septembre 2021}
 \author{Loïc Séguin-Charbonneau}
 \institute{Cégep Édouard-Montpetit}
@@ -41,7 +41,7 @@ de potentiel $\Delta V$ entre les deux plaques, quelle charge sera emmagasinée
 sur chacune des plaques?
 
 \begin{center}
-  \includegraphics[scale=0.4]{../figures/condensateur-plan.pdf}
+  \includegraphics[scale=0.4]{figures/condensateur-plan.pdf}
 \end{center}
 
 \end{frame}
@@ -54,7 +54,7 @@ tension. Chacune des plaques a une surface $A$. Si on applique une différence
 de potentiel $\Delta V$ entre les deux plaques.
 
 \begin{center}
-  \includegraphics[scale=0.4]{../figures/condensateur-plan.pdf}
+  \includegraphics[scale=0.4]{figures/condensateur-plan.pdf}
 \end{center}
 
 
@@ -136,14 +136,15 @@ Lequel des énoncés suivants est vrai.
 
 \begin{frame}[t]{Propriétés du condensateur plan}
 
-Lequel des énoncés suivants est vrai.
+Lesquels des énoncés suivants sont vrais.
 
 \begin{enumerate}[A.]
-  \item<alert@2> Plus la distance entre les plaques est grande, plus la différence de
-    potentiel doit être élevée pour maintenir la même charge sur les plaques.
-  \item Si la densité surfacique de charge augmente et que la différence de
-    potentiel demeure la même, c'est parce que la distance entre les plaques a
-    diminué.
+  \item<alert@2> Plus la distance entre les plaques est grande, plus la
+    différence de potentiel doit être élevée pour maintenir la même charge sur
+    les plaques.
+  \item<alert@2> Si la densité surfacique de charge augmente et que la
+    différence de potentiel demeure la même, c'est parce que la distance entre
+    les plaques a diminué.
   \item Pour un condensateur donné, plus la différence de potentiel entre les
     plaques augmente, plus la capacité diminue.
 \end{enumerate}
@@ -189,8 +190,8 @@ quantité d'énergie qui peut être relâchée durant cette explosion?
 \begin{frame}{Exercice}
 
 On a deux condensateurs identiques. Le condensateur A porte une charge de
-\SI{100}{\micro\farad} et le condensateur B porte une charge de
-\SI{50}{\micro\farad}. Quel énoncé est vrai?
+\SI{100}{\micro\coulomb} et le condensateur B porte une charge de
+\SI{50}{\micro\coulomb}. Quel énoncé est vrai?
 
 \begin{enumerate}[A.]
   \item La capacité du condensateur A est deux fois plus grande que celle du
@@ -212,7 +213,7 @@ On a deux condensateurs identiques. Le condensateur A porte une charge de
 On a deux condensateurs identiques sauf pour le diélectrique. Dans le
 condensateur A, le diélectrique est du papier (constante diélectrique de 3).
 Dans le condensateur B le diélectrique est du mica (constante diélectrique de
-6). Les deux condensateurs portent la même charge. Lequel des énoncés est vrai.
+6). Les deux condensateurs portent la même charge. Quels énoncés sont vrais.
 
 \begin{enumerate}[A.]
   \item La capacité du condensateur A est deux fois plus grande que celle du
@@ -221,8 +222,8 @@ Dans le condensateur B le diélectrique est du mica (constante diélectrique de
     deux fois plus grand que celui de B.
   \item La différence de potentiel du condensateur A est deux fois plus petite
     que celle de B.
-  \item Il y a deux fois plus d'énergie emmagasinée dans le condensateur A que
-    le B.
+  \item<alert@2> Il y a deux fois plus d'énergie emmagasinée dans le
+    condensateur A que le B.
 \end{enumerate}
 
 \end{frame}
