--- a/em.tex
+++ b/em.tex
@@ -18,13 +18,13 @@
 
 \include{01-force-electrique/planif01}
 \include{02-champ-electrique/planif02}
-%\include{03-gauss/planif03}
-%\include{04-potentiel/planif04}
-%\include{07-condensateurs/planif07}
-%\include{05-courant-resistance/planif05}
-%\include{06-sources-circuits/planif06}
-%\include{08-circuits-rc/planif08}
-%\include{09-courant-alternatif/planif09}
-%\include{10-force-magnetique/planif10}
+\include{03-gauss/planif03}
+\include{04-potentiel/planif04}
+\include{05-condensateurs/planif05}
+\include{06-courant/planif06}
+\include{07-circuits-cc/planif07}
+\include{08-champ-magnetique/planif08}
+\include{09-force-magnetique/planif09}
+\include{10-induction-electromagnetique/planif10}
 
 \end{document}
