--- a/08-champ-magnetique/planif08.tex
+++ b/08-champ-magnetique/planif08.tex
@@ -387,8 +387,8 @@ direction du courant. Le pouce indique alors la direction du champ magnétique.
   laquelle un plasma à haute température est confiné grâce à un champ
   magnétique de \SI{5.3}{\tesla}. Le champ magnétique est produit par un
   solénoïde toroïdal (un solénoïde dont les extrémités sont reliées ensembles).
-  Le tore a un rayon d'environ \SI{6.2}{\meter} et les spires ont un rayon
-  d'environ \SI{6.5}{\meter}. Le courant qui circule dans le câble est de
+  Le tore a un rayon d'environ \SI{6.5}{\meter} et les spires ont un rayon
+  d'environ \SI{6.2}{\meter}. Le courant qui circule dans le câble est de
   \SI{68}{\kilo\ampere}. Quelle est la longueur de câble totale utilisée dans
   le solénoïde?
 \end{diapobox}
@@ -403,17 +403,18 @@ direction du courant. Le pouce indique alors la direction du champ magnétique.
   La longueur du solénoïde est
   \begin{align*}
     L &= 2\pi R  \\
-      &= \SI{38.96}{\meter}
+      &= \SI{40.84}{\meter}
   \end{align*}
-  où $R = \SI{6.2}{\meter}$. Le nombre total de tour est donc
+  où $R = \SI{6.5}{\meter}$. Le nombre total de tour est donc
   \begin{align*}
     N &= nL \\
-      &= \frac{2\pi R B}{\mu_0 i}
+      &= \frac{2\pi R B}{\mu_0 i}  \\
+      &= 2533
   \end{align*}
-  Chaque tour de câble a une longueur de $2\pi r$ où $r = \SI{6.5}{\meter}$. La
+  Chaque tour de câble a une longueur de $2\pi r$ où $r = \SI{6.2}{\meter}$. La
   longueur totale de câble est donc
   \begin{align*}
-    d &= Nr  \\
+    d &= N\cdot 2\pi r  \\
       &= \frac{4\pi^2 rR B}{\mu_0 i}  \\
       &= \SI{98.68}{\kilo\meter}
   \end{align*}
