--- a/10-induction-electromagnetique/planif10.tex
+++ b/10-induction-electromagnetique/planif10.tex
@@ -206,7 +206,7 @@ déterminer la direction, on utilise la loi de Lenz:
   \begin{align*}
     \emf_5 &= -\pi r^2 N \frac{\SI{2}{G} - \SI{8}{G}}{\SI{10}{\second} -
               \SI{0}{\second}}  \\
-           &= \SI{0.2356}{\volt}
+           &= \SI{0.2356e-4}{\volt}
   \end{align*}
   Puisque le champ magnétique diminue, le flux diminue et le champ induit doit
   être dans la même direction que le champ externe et le courant est donc dans
@@ -220,7 +220,7 @@ déterminer la direction, on utilise la loi de Lenz:
   \begin{align*}
     \emf_{20} &= -\pi r^2 N \frac{\SI{3}{G} - \SI{2}{G}}{\SI{20}{\second} -
               \SI{15}{\second}}  \\
-           &= \SI{-0.07854}{\volt}
+           &= \SI{-0.07854e-4}{\volt}
   \end{align*}
   Puisque le champ magnétique externe augmente, le flux augmente et le champ
   induit doit être dans la direction opposée au champ externe. Le courant est
@@ -272,7 +272,7 @@ Par conséquent
 \begin{align*}
   \emf &= BLv \\
   I &= \frac{BLv}{R} \\
-    &= \SI{0.2}{mA}
+    &= \SI{0.210}{mA}
 \end{align*}
 Puisque l'aire augmente, le flux augmente donc la fém induite doit produire un
 champ magnétique dans la direction opposée à celle du champ externe. Le courant
